fixed CSS that broke h2 alignment on index.html

--- a/css/index.css
+++ b/css/index.css
@@ -283,7 +283,7 @@ header nav a {
 
 }
 
-.about-top-content p, h2 {
+.about-top-content p, .about-top-content h2 {
     margin: 20px;
 }
 
